# polytensor

./: .gitignore  Makefile  README.rst  index.html  requirements.txt  setup.cfg  setup.py  testrequirements.txt
docs/source/: api.rst  conf.py  index.rst  modules.rst  polynomial.rst  polytensor.rst  usage.rst
polytensor/: __init__.py  coefficients.py  converters.py  generators.py  polynomial.py  potts.py  priors.py  serialize.py  validate.py
polytensor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: testClock.py  testCoefficients.py  testGrad.py  testHigherOrder.py  testPackage.py  testPotts.py  testSparseDense.py  testValidation.py
