[metadata]
name = polytensor
description = A polynomial regression tool built on pytorch.
long_description = file: README.rst
long_description_content_type = text/markdown
author = Blake A. Wilson
author_email = wilso692@gmail.com
license = MIT License
license_files = file: LICENSE
version = 0.0.6
url = https://btrainwilson.github.io/polytensor
download_url = https://pypi.org/project/polytensor
project_urls = 
    Source Code = https://github.com/btrainwilson/polytensor
keywords = 
    polynomial
    qubo
    discrete polynomial
    pseudo-boolean
    cuda
    autograd
    pytorch
    torch
    machine learning
classifiers = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
install_requires = 
    beartype>=0.16.4
    numpy>=1.3.0
    torch>=2.0.0

